remind the logic
clear & modify the code and testing